crates/app/src/snapshots/tidal_player__ui__tests__ac12_search_nothing_found.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Search · "pierce the veil"                                                    │
│Search: pierce the veil▏                                                      │
│┌Tracks (0)───────────────────────────┐┌Albums (0)───────────────────────────┐│
││No tracks found                      ││No albums found                      ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
│┌Artists (0)──────────────────────────┐┌Playlists (0)────────────────────────┐│
││No artists found                     ││No playlists found                   ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
