crates/app/src/snapshots/tidal_player__ui__tests__ac12_search_top_hit.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Search · "pierce the veil"                                                    │
│Search: pierce the veil                                                       │
│Top hit: Pierce The Veil · artist                                             │
│┌Tracks (300)─────────────────────────┐┌Albums (41)──────────────────────────┐│
││  1    Hell Above    Pierce T…   3:32││Collide With The…  Pierce The…   2012││
││  2    King For A…   Pierce T…   3:52││Misadventures      Pierce The…   2016││
││  3    Bulls In Th…  Pierce T…   4:50││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
│┌Artists (6)──────────────────────────┐┌Playlists (300)──────────────────────┐│
││Pierce The Veil                      ││  This Is Pierce The Veil          50││
││Sleeping With Sirens                 ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
