crates/app/src/snapshots/tidal_player__ui__tests__ac14_help_40x12.snap
---
source: crates/app/src/ui.rs
assertion_line: 2194
expression: text
---
┌tidal-player──────────────────────────┐
│▶ Hell Above · Pierce The Veil     80%│
┌Keys──────────────────────────────────┐
│ Library · Playlists                  │
│   enter           open the playlist  │
│   Z  C-z          add to the end of… │
│   g a  C-space    actions on the sel…│
│ Lists                                │
│   j  down  C-n    move down          │
│   k  up  C-p      move up            │
│ / filter · enter run · esc close     │
└──────────────────────────────────────┘
