crates/app/src/snapshots/tidal_player__ui__tests__ac14_help_custom_keymap.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Library                                                                       │
│┌Playlists (22)───────────────┐┌Albums (14)──────────────────┐┌Artists (196)─┐│
││  Runni┌Keys────────────────────────────────────────────────────────┐The Ve…││
││♥ Late │ Library · Playlists                                        │g With…││
││  Gym m│   enter           open the playlist                        │e The… ││
││       │   Z  C-z          add to the end of the queue              │       ││
││       │   g a  C-space    actions on the selected row              │       ││
││       │   /               filter the rows                          │       ││
││       │ Lists                                                      │       ││
││       │   j  down  C-n    move down                                │       ││
││       │   k  up  C-p      move up                                  │       ││
││       │   C-f  page_down  move down a window                       │       ││
││       │   C-b  page_up    move up a window                         │       ││
││       │   g g             move to the top                          │       ││
││       │ / filter · enter run · esc close                           │       ││
││       └────────────────────────────────────────────────────────────┘       ││
││                             ││                             ││              ││
│└─────────────────────────────┘└─────────────────────────────┘└──────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
