crates/app/src/snapshots/tidal_player__ui__tests__ac14_help_custom_keymap_end.snap
---
source: crates/app/src/ui.rs
assertion_line: 2171
expression: end
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Library                                                                       │
│┌Playlists (22)───────────────┐┌Albums (14)──────────────────┐┌Artists (196)─┐│
││  Runni┌Keys────────────────────────────────────────────────────────┐The Ve…││
││♥ Late │   -               volume down                              │g With…││
││  Gym m│   _               mute / unmute                            │e The… ││
││       │   o               add a link or ID to the end of the queue │       ││
││       │   O               add a link or ID to play next            │       ││
││       │   a               actions on the playing track             │       ││
││       │ Actions                                                    │       ││
││       │   r               the radio of the selected track or artist│       ││
││       │   g B             go to the album (playing track)          │       ││
││       │ App                                                        │       ││
││       │   ?  C-h          this help                                │       ││
││       │   C-c             quit (an attached TUI detaches)          │       ││
││       │ / filter · enter run · esc close                           │       ││
││       └────────────────────────────────────────────────────────────┘       ││
││                             ││                             ││              ││
│└─────────────────────────────┘└─────────────────────────────┘└──────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
