crates/app/src/snapshots/tidal_player__ui__tests__ac14_help_no_match.snap
---
source: crates/app/src/ui.rs
assertion_line: 2140
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│Library                                                                       │
│┌Playlists (22)───────────────┐┌Albums (14)──────────────────┐┌Artists (196)─┐│
││  Runni┌Keys────────────────────────────────────────────────────────┐The Ve…││
││♥ Late │ No keys match "xyz"                                        │g With…││
││  Gym m│                                                            │e The… ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │                                                            │       ││
││       │ /xyz▏ · enter keep · esc clear                             │       ││
││       └────────────────────────────────────────────────────────────┘       ││
││                             ││                             ││              ││
│└─────────────────────────────┘└─────────────────────────────┘└──────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
