crates/app/src/snapshots/tidal_player__ui__tests__ac14_help_queue.snap
---
source: crates/app/src/ui.rs
expression: text
---
┌tidal-player──────────────────────────────────────────────────────────────────┐
│▶ Hell Above · Pierce The Veil                     shuffle  repeat: queue  80%│
│  Collide With The Sky                                                        │
│  LOSSLESS FLAC 16-bit 44.1 kHz → hw:1,0 · not bit-perfect: volume below 100% │
│  ━━━━━━━━━━━━━━━━━━━━━━━━━──────────────────────────────────────  1:23 / 3:32│
│┌Queue (12)──────────────────────────────────────────────────────────────────┐│
││  1   May These Noises Start…  Pierce The Veil    Collide With The S…   4:01││
││▶ 2   H┌Keys────────────────────────────────────────────────────────┐   3:32││
││  3   A│ Queue                                                      │   4:22││
││  4   K│   enter           play the entry                           │   3:52││
││  5   B│   d               remove from the queue                    │   4:50││
││  6   P│   g a  C-space    actions on the entry                     │   3:33││
││  7   T│   /               filter the rows                          │   5:04││
││  8   S│ Lists                                                      │   3:53││
││  9   I│   j  down  C-n    move down                                │   3:43││
││  ── Su│   k  up  C-p      move up                                  │───────││
││  10  I│   C-f  page_down  move down a window                       │   3:39││
││  11  C│   C-b  page_up    move up a window                         │   3:48││
││  12  A│   g g             move to the top                          │   3:21││
││       │ / filter · enter run · esc close                           │       ││
││       └────────────────────────────────────────────────────────────┘       ││
││                                                                            ││
│└────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
